Decreases nav link area in Layout component to prevent overlapping to improve accessibility

--- a/src/components/about.module.css
+++ b/src/components/about.module.css
@@ -3,6 +3,8 @@
 }
 .about-img {
   width: 265px;
+}
+.about-img img {
   border-radius: 5px;
 }
 
